------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes. Please use the header
format provided for each entry.

Al
------------------------------------------------------------------------------

Fri Jun 29 17:05:39 GMT 2001	Riley Williams <rhw@memalpha.cx>
	* Add CONFIG_EXPERIMENTAL, CONFIG_OBSOLETE and CONFIG_NOT_YET to
	  Documentation/Configure.help and arch/i86/config.in files ready
	  for use with other options.
	* Rationalise arch/i86/config.in to enable `make menuconfig` to
	  work - previously, it didn't.
	* Upgrade scripts/Configure and scripts/Menuconfig to the versions
	  included with the Linux 2.4.5 kernel source trees.

Tue Jun 26 01:18:57 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>
	* Semaphores made all inode downs block because sleeping when non positive.
	  Fixed to sleep on negative and wake on non negative.

Sun Jun 24 23:01:09 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>
	* implemented do_mknod()
	* Some fixes in AF_UNIX sockets.
	* socket.state changed to unsighed char to solve compiler problems
	* Modified ntty.c and serial.c to support "raw" mode required for
	  networking
	* Now serial baud rate is set to the default on init and not open
	* tty_charout now blocks the right way if queue is full in ntty.c
	* Modified tty_read() in ntty.c
	* Merged in TCP/IP code
	* Fixed bug in do_select(). The new wait_set() expects current->waitpt
	  to be null. The do_select() didn't honor that.

Wed Jun 20 23:21:51 BST 2001    Alan Cox  <alan@redhat.com>
	* Merged fix for sycall.dat error I made (fix by Harry Kalogirou)
	* Merged Riley's first Configure changes

Mon Jun 18 00:18:55 BST 2001	Alan Cox  <alan@redhat.com>
	* Fixed bugs in the new tty select code
	* Added select to pty
	* Added register keywords to malloc.c to save memory
	* Fixed double indirection (> 512Kbytes) on minixfs
