@@ -73,7 +73,6 @@
 #undef  CONFIG_FULL_VFS
 #define CONFIG_FS_EXTERNAL_BUFFER 1
 #define CONFIG_PIPE 1
-#undef  CONFIG_FS_RO
 #define CONFIG_EXEC_MINIX 1
 #undef  CONFIG_EXEC_MSDOS
 
